# events-manager

./: .env-dist  .gitignore  .pre-commit-config.yaml  Makefile  compose.yml
.github/workflows/: ci.yml
docker/: .bashrc  Dockerfile  post_deploy.sh
src/: data_event.py  main.py  mixpanel_handler.py  pyproject.toml  security.py  settings.py
src/test/: test_data_event.py  test_main.py  test_mixpanel_handler.py
