[tool.poetry]
name = "events-manager"
version = "0.0.0"
description = "Events service"
package-mode = false
authors = ["martingaldeca <martingaldeca@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
fastapi = "0.115.12"
uvicorn = "0.34.0"
clickhouse-sqlalchemy = "0.3.2"
mixpanel = "4.10.1"

[tool.poetry.group.test.dependencies]
black = "25.1.0"
isort = "6.0.1"
ipdb = "0.13.13"
ruff = "0.11.2"
pylint = "3.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", "W0718", "R0902", "R0903", "C0115", 'C0103', 'R0914', "C0116", "C0411",
    "R0401", "R0801", "E0611", "E0401", "F0010", "R0917", "R0913", "C0415", "W0212",
    "R0901", "W0223", "E1134"
]
good-names = ['ex', ]
generated-members = ["objects"]

[tool.black]
line-length = 120

[tool.isort]
skip = "__init__.py"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
relative_files = true
omit = [
    "*/__init__.py",
]

[tool.ruff]
line-length = 120
exclude = [
    ".pytest_cache",
    "venv",
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
